# mogipay

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0772d324e452_change_price_columns_from_numeric_to_.py  211f79022b3c_create_initial_database_schema.py  8651b808853a_create_kitchen_tickets_table.py  88ef79a677c4_create_initial_database_schema.py
backend/app/: database.py  exceptions.py  main.py
backend/app/api/: auth_controller.py  financial_controller.py  inventory_controller.py  kitchen_controller.py  product_controller.py  sales_controller.py
backend/app/dependencies/: auth.py
backend/app/models/: __init__.py  kitchen_ticket.py  product.py  sale_item.py  sales_history.py  set_item.py
backend/app/repositories/: __init__.py  kitchen_ticket_repository.py  product_repository.py  sales_history_repository.py  set_item_repository.py
backend/app/schemas/: auth.py  kitchen.py  product.py
backend/app/services/: financial_service.py  inventory_service.py  kitchen_ticket_service.py  product_service.py  sales_analytics_service.py  sales_history_service.py  sales_service.py
backend/app/utils/: auth.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py  test_stock_overlap.py
backend/tests/api/: test_financial_controller.py  test_inventory_controller.py  test_kitchen_controller.py  test_product_controller.py  test_sales_controller.py
frontend/: .dockerignore  (+3 more)
(+38 files in other folders)
